Enabled collapse/expand of a node with keyboard. Disabled highlighting of nodes inside the dropdown. Small styling fixes. (#4413)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/selector/dropdown/dropdown.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/selector/dropdown/dropdown.less
@@ -94,7 +94,18 @@
   }
 }
 
-.dropdown-tree-grid .grid .slick-row.readonly {
-  opacity: 0.5;
-  pointer-events: none;
+.dropdown-tree-grid .grid {
+  .slick-row {
+    &.readonly {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+    .toggle.icon {
+      margin-right: 0px;
+      &.expand, &.collapse {
+        padding-left: 10px;
+        margin-right: 10px;
+      }
+    }
+  }
 }
